--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "noStrictGenericChecks": true,
     "lib": [
       "es2017",
       "dom"
